--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+@use "./config-scss/variables.scss";
+@use "./config-scss/rem-cal.scss";
+@use "./config-scss/reset.scss";
+
+html {
+  font-family: "Poppins", "Courier New", Courier, monospace;
+  background-color: var(--primary-color);
+}
+
+main {
+  max-width: rem-cal(600);
+  margin: 0 auto;
+  box-sizing: border-box;
+}
