--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
-@use "./config-scss/variables.scss";
-@use "./config-scss/rem-cal.scss";
-@use "./config-scss/reset.scss";
+@import "./config-scss/variables.scss";
+@import "./config-scss/rem-cal.scss";
+@import "./config-scss/reset.scss";
 
 html {
   font-family: "Poppins", "Courier New", Courier, monospace;
@@ -9,7 +9,7 @@ html {
 }
 
 main {
-  max-width: rem-cal(600);
+  width: rem-calc(600);
   margin: 0 auto;
   box-sizing: border-box;
 }
