--- a/src/app/shared/poke-search/poke-search.component.html
+++ b/src/app/shared/poke-search/poke-search.component.html
@@ -1,1 +1,4 @@
-<p>poke-search works!</p>
+<form>
+  <input type="" placeholder="Buscar Pokemon...">
+  <img src="../../../assets/lupa.svg" alt="Ícone de busca">
+</form>
