--- a/src/app/shared/poke-list/poke-list.component.html
+++ b/src/app/shared/poke-list/poke-list.component.html
@@ -1,1 +1,29 @@
-<p>poke-list works!</p>
+<a href="" class="pokemon">
+  <section class="pokemon-status">
+    <h2>Bulbasaur</h2>
+
+    <ul>
+      <li>Grass</li>
+      <li>Poison</li>
+    </ul>
+  </section>
+
+  <section class="pokemon-image">
+    <img src="../../../assets/pokemons-png/bulbasaur.png" alt="Bulbasaur">
+  </section>
+</a>
+
+<a href="" class="pokemon">
+  <section class="pokemon-status">
+    <h2>Bulbasaur</h2>
+
+    <ul>
+      <li>Grass</li>
+      <li>Poison</li>
+    </ul>
+  </section>
+
+  <section class="pokemon-image">
+    <img src="../../../assets/pokemons-png/bulbasaur.png" alt="Bulbasaur">
+  </section>
+</a>
