alimentando infomações puxanodo da api

--- a/src/app/shared/poke-list/poke-list.component.scss
+++ b/src/app/shared/poke-list/poke-list.component.scss
@@ -8,6 +8,8 @@ $padding: rem-calc(20);
   display: flex;
   justify-content: space-between;
   padding: $padding 0;
+  flex-wrap: wrap;
+  gap: rem-calc(10);
 
   .pokemon {
     position: relative;
@@ -23,6 +25,7 @@ $padding: rem-calc(20);
         font-size: rem-calc(22);
         font-style: italic;
         font-weight: bold;
+        text-transform: capitalize;
         margin-bottom: rem-calc(10);
       }
 
