--- a/src/app/shared/poke-list/poke-list.component.html
+++ b/src/app/shared/poke-list/poke-list.component.html
@@ -1,29 +1,19 @@
-<a href="" class="pokemon">
-  <section class="pokemon-status">
-    <h2>Bulbasaur</h2>
+<ng-template ngFor let-pokemon [ngForOf]="getAllPokemons">
+  <a href="" class="pokemon">
+    <section class="pokemon-status">
+      <h2>{{ pokemon.name }}</h2>
 
-    <ul>
-      <li>Grass</li>
-      <li>Poison</li>
-    </ul>
-  </section>
+      <ul>
+        <li *ngFor="let value of pokemon.status.types">
+          <p>
+            {{ value.type.name }}
+          </p>
+        </li>
+      </ul>
+    </section>
 
-  <section class="pokemon-image">
-    <img src="../../../assets/pokemons-png/bulbasaur.png" alt="Bulbasaur">
-  </section>
-</a>
-
-<a href="" class="pokemon">
-  <section class="pokemon-status">
-    <h2>Bulbasaur</h2>
-
-    <ul>
-      <li>Grass</li>
-      <li>Poison</li>
-    </ul>
-  </section>
-
-  <section class="pokemon-image">
-    <img src="../../../assets/pokemons-png/bulbasaur.png" alt="Bulbasaur">
-  </section>
-</a>
+    <section class="pokemon-image">
+      <img src="../../../assets/pokemons-png/bulbasaur.png" alt="Bulbasaur">
+    </section>
+  </a>
+</ng-template>
