listagem de pokemons implementada

--- a/src/app/shared/poke-list/poke-list.component.scss
+++ b/src/app/shared/poke-list/poke-list.component.scss
@@ -19,6 +19,8 @@ $padding: rem-calc(20);
     background: var(--white);
     padding: $padding;
     border-radius: rem-calc(10);
+    text-decoration: none;
+    color: var(--primary-color);
 
     &-status {
       h2 {
