--- a/src/app/shared/poke-list/poke-list.component.html
+++ b/src/app/shared/poke-list/poke-list.component.html
@@ -1,10 +1,10 @@
 <ng-template ngFor let-pokemon [ngForOf]="getAllPokemons">
-  <a href="" class="pokemon">
+  <a [routerLink]="['details', pokemon?.status?.id]" href="" class="pokemon">
     <section class="pokemon-status">
       <h2>{{ pokemon.name }}</h2>
 
       <ul>
-        <li *ngFor="let value of pokemon.status.types">
+        <li *ngFor="let value of pokemon?.status?.types">
           <p>
             {{ value.type.name }}
           </p>
@@ -13,7 +13,7 @@
     </section>
 
     <section class="pokemon-image">
-      <img src="../../../assets/pokemons-png/bulbasaur.png" alt="Bulbasaur">
+      <img [src]="pokemon?.status?.sprites?.other?.dream_world.front_default" [alt]="pokemon.name">
     </section>
   </a>
 </ng-template>
