--- a/src/app/shared/poke-list/poke-list.component.html
+++ b/src/app/shared/poke-list/poke-list.component.html
@@ -1,19 +1,23 @@
-<ng-template ngFor let-pokemon [ngForOf]="getAllPokemons">
-  <a [routerLink]="['details', pokemon?.status?.id]" href="" class="pokemon">
-    <section class="pokemon-status">
-      <h2>{{ pokemon.name }}</h2>
+<poke-search (emmitSearch)="getSearch($event)"></poke-search>
 
-      <ul>
-        <li *ngFor="let value of pokemon?.status?.types">
-          <p>
-            {{ value.type.name }}
-          </p>
-        </li>
-      </ul>
-    </section>
+<section class="list">
+  <ng-template ngFor let-pokemon [ngForOf]="getAllPokemons">
+    <a [routerLink]="['details', pokemon?.status?.id]" href="" class="pokemon">
+      <section class="pokemon-status">
+        <h2>{{ pokemon.name }}</h2>
 
-    <section class="pokemon-image">
-      <img [src]="pokemon?.status?.sprites?.other?.dream_world.front_default" [alt]="pokemon.name">
-    </section>
-  </a>
-</ng-template>
+        <ul>
+          <li *ngFor="let value of pokemon?.status?.types">
+            <p>
+              {{ value.type.name }}
+            </p>
+          </li>
+        </ul>
+      </section>
+
+      <section class="pokemon-image">
+        <img [src]="pokemon?.status?.sprites?.other?.dream_world.front_default" [alt]="pokemon.name">
+      </section>
+    </a>
+  </ng-template>
+</section>
