--- a/src/app/shared/poke-list/poke-list.component.scss
+++ b/src/app/shared/poke-list/poke-list.component.scss
@@ -5,62 +5,64 @@
 $padding: rem-calc(20);
 
 :host {
-  display: flex;
-  justify-content: space-between;
-  padding: $padding 0;
-  flex-wrap: wrap;
-  gap: rem-calc(10);
-
-  .pokemon {
-    position: relative;
+  .list {
     display: flex;
-    width: 49%;
-    height: rem-calc(157);
-    background: var(--white);
-    padding: $padding;
-    border-radius: rem-calc(10);
-    text-decoration: none;
-    color: var(--primary-color);
+    justify-content: space-between;
+    padding: $padding 0;
+    flex-wrap: wrap;
+    gap: rem-calc(10);
 
-    &-status {
-      h2 {
-        font-size: rem-calc(22);
-        font-style: italic;
-        font-weight: bold;
-        text-transform: capitalize;
-        margin-bottom: rem-calc(10);
-      }
+    .pokemon {
+      position: relative;
+      display: flex;
+      width: 49%;
+      height: rem-calc(157);
+      background: var(--white);
+      padding: $padding;
+      border-radius: rem-calc(10);
+      text-decoration: none;
+      color: var(--primary-color);
 
-      ul {
-        display: flex;
-        flex-direction: column;
-        gap: rem-calc(5);
+      &-status {
+        h2 {
+          font-size: rem-calc(22);
+          font-style: italic;
+          font-weight: bold;
+          text-transform: capitalize;
+          margin-bottom: rem-calc(10);
+        }
 
-        li {
-          background: var(--grey);
-          font-size: rem-calc(10);
+        ul {
           display: flex;
-          justify-content: center;
-          align-items: center;
-          border-radius: rem-calc(50);
-          width: rem-calc(60);
+          flex-direction: column;
+          gap: rem-calc(5);
+
+          li {
+            background: var(--grey);
+            font-size: rem-calc(10);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: rem-calc(50);
+            width: rem-calc(60);
+          }
         }
       }
-    }
 
-    &-image {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      position: absolute;
-      padding: 15px;
-      right: 20px;
-      bottom: 10px;
-      background: url("../../../assets/pokemons-png/bolinhas.png") no-repeat
-        center;
+      &-image {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        padding: 15px;
+        right: 20px;
+        bottom: 10px;
+        background: url("../../../assets/pokemons-png/bolinhas.png") no-repeat
+          center;
 
-      img {
-        width: rem-calc(80);
+        img {
+          width: rem-calc(80);
+        }
       }
     }
   }
