finalização do projeto

--- a/src/app/pages/details/details.component.html
+++ b/src/app/pages/details/details.component.html
@@ -1,1 +1,32 @@
-<h1>details</h1>
+<poker-header></poker-header>
+
+<ng-template [ngIf]="isLoading">
+  <main>
+    <section class="pokemon-names">
+      <h1 class="slideInLeft">{{ pokemon[0].name }}</h1>
+      <h2 class="slideInRight">{{ pokemon[1].names[0].name }}</h2>
+    </section>
+
+    <section class="pokemon-status">
+      <img [src]="pokemon[0]?.sprites?.other?.dream_world.front_default" [alt]="pokemon[0].name" class="slideInDown">
+
+      <article class="pokemon-status-statistics fadeIn">
+        <section>
+          <h3>Estatísticas</h3>
+
+          <ol>
+            <li *ngFor="let value of pokemon[0].stats">
+              {{ value.stat.name }}
+
+              <strong>{{ value.base_stat }}</strong>
+            </li>
+          </ol>
+        </section>
+
+        <a [routerLink]="['']" class="btn btn-secondary">Voltar</a>
+      </article>
+    </section>
+  </main>
+</ng-template>
+
+<img src="../../../assets/error.png" alt="Imagem de erro na listagem dos pokemons" width="70%" *ngIf="apiError">
