--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 @import "./config-scss/variables.scss";
 @import "./config-scss/rem-cal.scss";
 @import "./config-scss/reset.scss";
+@import "./config-scss/animation.scss";
 
 html {
   font-family: "Poppins", "Courier New", Courier, monospace;
