--- a/src/app/shared/poke-list/poke-list.component.html
+++ b/src/app/shared/poke-list/poke-list.component.html
@@ -21,3 +21,5 @@
     </a>
   </ng-template>
 </section>
+
+<img src="../../../assets/error.png" alt="Imagem de erro na listagem dos pokemons" width="100%" *ngIf="apiError">
